# assignment_planning

./: README.md  assignment1_https.repos  assignment1_ssh.repos  tree.txt
src/assignment1/: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
src/assignment1/launch/: assignment.launch.py  assignment_husarion.launch.py
src/assignment1/scripts/: aruco_detection.py  detection_primitives.py  mission_controller.py
src/assignment_plansys2/: CMakeLists.txt  package.xml
src/assignment_plansys2/launch/: distributed_navigation.launch.py  plansys2_assignment.launch.py
src/assignment_plansys2/pddl/: domain.pddl  problem.pddl
src/assignment_plansys2/src/: capture_action_node.cpp  change_state_action_node.cpp  explore_action_node.cpp  navigate_and_capture_action_node.cpp  navigate_and_rotate_action_node.cpp
src/robot_manager/: CMakeLists.txt  README.md  package.xml
src/robot_manager/action/: Center.action  Scan.action
src/robot_manager/config/: ekf.yaml
src/robot_manager/launch/: check_urdf.launch.py  spawn_robot_assignment.launch.py
src/robot_manager/urdf/: mogi_bot.gazebo  mogi_bot.urdf
src/ros2_navigation/config/: amcl_localization.yaml  navigation.yaml  slam_toolbox_mapping.yaml
src/rosbot_ros/: MANIPULATOR.md  README.md
src/rosbot_ros/docker/: compose.rosbot.yaml  compose.rosbot_xl.yaml  compose.simulation.yaml
src/rosbot_ros/rosbot/: CHANGELOG.rst  manipulator.repos  package.xml  rosbot_hardware.repos  rosbot_simulation.repos
src/rosbot_ros/rosbot_bringup/: CHANGELOG.rst  package.xml  setup.py
src/rosbot_ros/rosbot_bringup/launch/: bringup.launch.py
src/rosbot_ros/rosbot_controller/: CHANGELOG.rst  package.xml  setup.py
src/rosbot_ros/rosbot_controller/config/rosbot/: diff_drive_controller.yaml  mecanum_drive_controller.yaml
src/rosbot_ros/rosbot_controller/config/rosbot_xl/: diff_drive_controller.yaml  diff_drive_manipulator_controller.yaml  mecanum_drive_controller.yaml  mecanum_drive_manipulator_controller.yaml
src/rosbot_ros/rosbot_controller/launch/: controller.launch.py  manipulator.launch.py
src/rosbot_ros/rosbot_description/: CHANGELOG.rst  package.xml
src/rosbot_ros/rosbot_description/urdf/common/: gazebo.urdf.xacro
src/rosbot_ros/rosbot_gazebo/: CHANGELOG.rst  package.xml  setup.py
src/rosbot_ros/rosbot_gazebo/launch/: simulation.launch.py  spawn_robot.launch.py
src/rosbot_ros/rosbot_gazebo/test/: test_multirobot.py  test_sim.py
src/rosbot_ros/rosbot_joy/: package.xml
src/rosbot_ros/rosbot_joy/config/: joy.yaml
src/rosbot_ros/rosbot_localization/: CHANGELOG.rst  package.xml
src/rosbot_ros/rosbot_utils/: CHANGELOG.rst  package.xml  setup.py
src/rosbot_ros/rosbot_utils/rosbot_utils/: flash_firmware.py
src/worlds_manager/launch/: my_launch_assignment.py
src/worlds_manager/worlds/: my_world_assignment.sdf
