<?xml version="1.0"?>
<package format="3">
  <name>assignment1</name>
  <version>0.0.0</version>
  <description>Assignment package with Python ROS 2 nodes</description>
  <maintainer email="example@todo.todo">Gian Marco</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>robot_manager</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
